--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,11 +6,22 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.0.1",
     "@testing-library/user-event": "^13.5.0",
+    "bootstrap": "^5.1.3",
+    "buffer": "^6.0.3",
+    "dotenv": "^16.0.0",
+    "process": "^0.11.10",
+    "prop-types": "^15.8.1",
     "react": "^18.0.0",
+    "react-bootstrap": "^2.3.1",
     "react-dom": "^18.0.0",
+    "react-icons": "^4.3.1",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "socket.io-client": "^4.5.0",
     "web-vitals": "^2.1.4",
-    "webrtc-adapter": "^8.1.1"
+    "webrtc-adapter": "^8.1.1",
+    "websocket": "^1.0.34",
+    "websocket-stream": "^5.5.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -35,5 +46,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "dotenv-cli": "^5.1.0",
+    "react-error-overlay": "^6.0.9"
   }
 }
