fix dockerfile pos

--- a/.github/workflows/backend-build.yaml
+++ b/.github/workflows/backend-build.yaml
@@ -27,7 +27,7 @@ jobs:
       matrix: 
         include: 
           - name: backend
-            file: /backend/Dockerfile
+            file: backend/Dockerfile
             target: release  
 
     steps: 
