--- a/.github/workflows/frontend-build.yaml
+++ b/.github/workflows/frontend-build.yaml
@@ -27,7 +27,7 @@ jobs:
       matrix: 
         include: 
           - name: frontend
-            file: /frontend/Dockerfile
+            file: frontend/Dockerfile
             target: release  
 
     steps: 
