--- a/.github/workflows/frontend-build.yaml
+++ b/.github/workflows/frontend-build.yaml
@@ -63,7 +63,7 @@ jobs:
       - name: Build and Push image 
         uses: docker/build-push-action@v2 
         with: 
-          context: .
+          context: ./frontend
           push: ${{ github.actor != 'dependabot[bot]' }}
           file: ${{ matrix.file }}
           target: ${{ matrix.target }}
