--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -9,7 +9,7 @@ RUN npm run build
 
 FROM nginx:latest as release
 COPY --from=builder /app/build /var/www/html 
-COPY ./nginx-default.conf /etc/nginx/conf.d/default.conf 
+COPY nginx-default.conf /etc/nginx/conf.d/default.conf 
 RUN nginx -t
 RUN service nginx restart 
 
